feat(app): adding local model usage within junas

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,7 @@
+[ ] Add a Cmd + Shift + P command that brings up a similar command interface like Ghostyy when typing in those commands in Junas
+[ ] Allow for onnx transformers via local browser download of model data
+[ ] Allow for local ollama models to be loaded somehow
+[ ] Allow for additional models and API keys to be added in somehow
 [ ] Remove dead code: Unimplemented API endpoints returning 501
 [ ] Fix duplicate type definitions
 [ ] Remove empty interface
