feat(app): adding encrypted share util dialog

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,5 @@
-[ ] Add a Cmd + Shift + P command that brings up a similar command interface like Ghostyy when typing in those commands in Junas
-[ ] Allow for onnx transformers via local browser download of model data
 [ ] Check that onnx models work for various purposes
-[ ] Centralise model display enitrely to within config tab, remove api model key configuration from bottom left of the textbox as it currently is
+[ ] Add an artifacts tab that allows a chat to have generated artifcats but they're stored locally
 [ ] Allow for local ollama models to be loaded somehow
 [ ] Allow for additional models and API keys to be added in somehow
 [ ] Remove dead code: Unimplemented API endpoints returning 501
