--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
-[x] Allow the model to generate txt and markdown documents if necessary and make that a / tool that various models (both ai llm providers and local models) can invoke
-[x] Add an artifacts tab that shows of a chat's generated artifacts (txt, markdown) if they are generated 
+[ ] Allow the model to generate txt and markdown documents if necessary and make that a / tool that various models (both ai llm providers and local models) can invoke
+[ ] Add an artifacts tab that shows of a chat's generated artifacts (txt, markdown) if they are generated 
 [ ] Check that onnx models work for various purposes
 [ ] Allow for local ollama models to be loaded somehow
 [ ] Allow for additional models and API keys to be added in somehow
