docs(app): eslint config tweak

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,5 @@
-[ ] Allow the model to generate txt and markdown documents if necessary and make that a / tool that various models (both ai llm providers and local models) can invoke
-[ ] Add an artifacts tab that shows of a chat's generated artifacts (txt, markdown) if they are generated 
-[ ] Check that onnx models work for various purposes
+[ ] Add dark mode toggle for all UI features
+[ ] Add conversation history
 [ ] Allow for local ollama models to be loaded somehow
 [ ] Allow for additional models and API keys to be added in somehow
 [ ] Remove dead code: Unimplemented API endpoints returning 501
@@ -41,13 +40,9 @@
 [ ] Update dependencies
 [ ] Remove unused dependencies
 [ ] Consider replacing react-mermaid
-[ ] Implement NER tool or remove endpoint
 [ ] Implement document analysis or remove endpoint
 [ ] Implement legal search or remove endpoint
 [ ] Complete message regeneration feature
-[ ] Add dark mode toggle
-[ ] Add conversation history
-[ ] Implement local model support via Ollama or LM Studio
 [ ] Create a sandboxed code interpreter tool for executing Python/JS
 [ ] Add a file system tool to allow AI to read/write local files (with user permission)
 [ ] Add a shell command tool to allow AI to execute terminal commands (with user permission)
