feat(app): added additional taskings

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,9 @@
-[ ] Add ability to edit a sent message and re-run the conversation from that point
-[ ] Add dark mode toggle for all UI features
+[ ] Add dark mode toggle for all UI features and ensure that all ui elements and text have logical color swaps
+[ ] Create an "Agent Mode" where the AI can autonomously chain tool calls to achieve a goal
+[ ] Add provider health status indicators to the UI
+[ ] Add animation or subtle chunk jiggle to the large Junas ASCII text on the landing page
 [ ] Add conversation history
+
 [ ] Allow for additional models and API keys to be added in somehow
 [ ] Remove dead code: Unimplemented API endpoints returning 501
 [ ] Fix duplicate type definitions
@@ -48,9 +51,9 @@
 [ ] Add a shell command tool to allow AI to execute terminal commands (with user permission)
 [ ] Implement chat forking/branching to explore different lines of conversation
 [ ] Add a "Projects" feature to group chats and associated context files
-[ ] Integrate a local vector database (e.g., ChromaDB) for long-term memory and RAG
 [ ] Develop a plugin system for third-party tools and providers
 [ ] Implement a side-by-side model comparison view
+[ ] Integrate a local vector database (e.g., ChromaDB) for long-term memory and RAG
 [ ] Allow per-message model selection within a single chat
 [ ] Add advanced generation parameter controls in the UI (temperature, top_p, etc.)
 [ ] Create a "Snippet Library" for users to save and reuse favorite prompts
@@ -69,8 +72,6 @@
 [ ] Allow users to create and save custom system prompts
 [ ] Implement a Dockerfile and docker-compose for easy self-hosting
 [ ] Add a tool to generate API requests from an OpenAPI/Swagger specification
-[ ] Create an "Agent Mode" where the AI can autonomously chain tool calls to achieve a goal
-[ ] Add provider health status indicators to the UI
 [ ] Implement automatic PII (Personally Identifiable Information) redaction tool
 [ ] Add support for local file indexing for workspace-aware context
 [ ] Create a "New Chat from Template" feature (e.g., "Code Review," "API Helper")
