fix(app): clearing things from the tasklist

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
 [ ] Create an "Agent Mode" where the AI can autonomously chain tool calls to achieve a goal
 [ ] Add provider health status indicators to the UI
-[ ] Add animation or subtle chunk jiggle to the large Junas ASCII text on the landing page
-[ ] Add conversation history
+[ ] Add animation or subtle chunk jiggle to the large Junas ASCII text on the landing page (clarify if unclear)
+[ ] Add conversation history (clarify if unclear)
 
 [ ] Allow for additional models and API keys to be added in somehow
 [ ] Remove dead code: Unimplemented API endpoints returning 501
