feat(app): add provider health pinging and api

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
 [ ] Create an "Agent Mode" where the AI can autonomously chain tool calls to achieve a goal
-[ ] Add provider health status indicators to the UI
+[x] Add provider health status indicators to the UI
 [x] Add animation or subtle chunk jiggle to the large Junas ASCII text on the landing page (clarify if unclear)
 [ ] Add conversation history (clarify if unclear)
 
