feat(app): things to do

--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,13 @@
-[x] Create an "Agent Mode" where the AI can autonomously chain tool calls to achieve a goal
-[x] Add provider health status indicators to the UI
-[x] Add animation or subtle chunk jiggle to the large Junas ASCII text on the landing page (clarify if unclear)
-[x] Add conversation history (clarify if unclear)
+[ ] Implement response regeneration with different parameters
+[ ] Add a tool for summarizing large documents or codebases
+[ ] Add support for displaying tables in chat messages
+[ ] Implement a "quick actions" bar on code blocks (e.g., copy, save to file, explain)
+[ ] Implement a confirmation step before executing destructive tool actions (e.g., file write)
+[ ] Create a settings page for managing available tools
+[ ] Implement a chat archiving system to hide old conversations
+[ ] Add a "focus mode" that hides UI elements for a cleaner interface
+[ ] Remove the current import/export function since the share by link already exists
 
-[ ] Allow for additional models and API keys to be added in somehow
-[ ] Remove dead code: Unimplemented API endpoints returning 501
 [ ] Fix duplicate type definitions
 [ ] Remove empty interface
 [ ] Replace deprecated methods
@@ -77,13 +80,3 @@
 [ ] Add keyboard shortcut for focusing on the message input field
 [ ] Implement a more robust settings export/import feature
 [ ] Add a database connector tool for querying SQL databases
-[ ] Implement response regeneration with different parameters
-[ ] Create a simple onboarding tour for new users
-[ ] Add a tool for summarizing large documents or codebases
-[ ] Implement a confirmation step before executing destructive tool actions (e.g., file write)
-[ ] Add support for displaying tables in chat messages
-[ ] Create a settings page for managing available tools
-[ ] Implement a "quick actions" bar on code blocks (e.g., copy, save to file, explain)
-[ ] Add support for voice input (Speech-to-Text)
-[ ] Implement a chat archiving system to hide old conversations
-[ ] Add a "focus mode" that hides UI elements for a cleaner interface
