feat(app): resolving message list dispaly

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
-[ ] Implement response regeneration with different parameters
-[ ] Add a tool for summarizing large documents or codebases
-[ ] Add support for displaying tables in chat messages
-[ ] Implement a confirmation step before executing destructive tool actions (e.g., file write)
+[x] Implement response regeneration with different parameters
+[x] Add a tool for summarizing large documents or codebases
+[x] Add support for displaying tables in chat messages
+[x] Implement a confirmation step before executing destructive tool actions (e.g., file write)
 
 [ ] Create a settings page for managing available tools
 [ ] Implement a chat archiving system to hide old conversations
