--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
 [ ] Create a settings page for managing available tools
 [ ] Implement a chat archiving system to hide old conversations
 [ ] Add a "focus mode" that hides UI elements for a cleaner interface
-[ ] Remove the current import/export function since the share by link already exists
+[x] Remove the current import/export function since the share by link already exists
 
 [ ] Fix duplicate type definitions
 [ ] Remove empty interface
