feat(app): fixed config dialog, recorded task completion

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
-[ ] Create a settings page for managing available tools
+[x] Create a settings page for managing available tools
 [ ] Implement a chat archiving system to hide old conversations
 [ ] Add a "focus mode" that hides UI elements for a cleaner interface
 
