feat(app): mark tool as done

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
-[ ] Add a "focus mode" that hides UI elements for a cleaner interface
+[x] Add a "focus mode" that hides UI elements for a cleaner interface
 
 [ ] Fix duplicate type definitions
 [ ] Remove empty interface
