feat(app): tweaking location of zen theme config

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,4 @@
-[x] Add a "focus mode" that hides UI elements for a cleaner interface
-
+[ ] Optimise the web app where possible to make it less slow
 [ ] Fix duplicate type definitions
 [ ] Remove empty interface
 [ ] Replace deprecated methods
