docs(app): remove task

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,4 @@
+[ ] Remove the various UI choices that now conflict with each other (eg. having both a new chat button and a warning on deletion but then the conversation history)
 [ ] Optimise the web app where possible to make it less slow
 [ ] Fix duplicate type definitions
 [ ] Remove empty interface
