--- a/todo.txt
+++ b/todo.txt
@@ -2,6 +2,16 @@
 [ ] Optimise the web app where possible to make it less slow
 [ ] Fix duplicate type definitions
 [ ] Remove empty interface
+[ ] Allow users to create and save custom system prompts
+[ ] Implement a Dockerfile and docker-compose for easy self-hosting
+[ ] Implement automatic PII (Personally Identifiable Information) redaction tool
+[ ] Create a "New Chat from Template" feature (e.g., "Code Review," "API Helper")
+[ ] Add keyboard shortcut for focusing on the message input field
+[ ] Integrate a local vector database (e.g., ChromaDB) for long-term memory and RAG
+[ ] Allow per-message model selection within a single chat
+[ ] Implement chat forking/branching to explore different lines of conversation (clarify funcitonality and render with a git graph-like view)
+[ ] Add advanced generation parameter controls in the config dialog (temperature, top_p, etc.)
+
 [ ] Replace deprecated methods
 [ ] Remove console.log statements in production code
 [ ] Implement onRegenerateMessage callback
@@ -33,42 +43,19 @@
 [ ] Lazy load Mermaid
 [ ] Optimize bundle size
 [ ] Add loading states and skeletons
-[ ] Consider virtualization for message list
+[ ] Consider virtualization for message list (clarify first what this means)
 [ ] Update dependencies
 [ ] Remove unused dependencies
 [ ] Consider replacing react-mermaid
 [ ] Implement document analysis or remove endpoint
 [ ] Implement legal search or remove endpoint
-[ ] Complete message regeneration feature
-[ ] Create a sandboxed code interpreter tool for executing Python/JS
-[ ] Add a file system tool to allow AI to read/write local files (with user permission)
-[ ] Add a shell command tool to allow AI to execute terminal commands (with user permission)
-[ ] Implement chat forking/branching to explore different lines of conversation
-[ ] Add a "Projects" feature to group chats and associated context files
-[ ] Develop a plugin system for third-party tools and providers
 [ ] Implement a side-by-side model comparison view
-[ ] Integrate a local vector database (e.g., ChromaDB) for long-term memory and RAG
-[ ] Allow per-message model selection within a single chat
-[ ] Add advanced generation parameter controls in the UI (temperature, top_p, etc.)
 [ ] Create a "Snippet Library" for users to save and reuse favorite prompts
-[ ] Implement a diff view for AI-suggested code changes
-[ ] Add chat folder and tagging system for organization
 [ ] Implement global search across all conversations
 [ ] Add a tool for fetching content from a user-provided URL
 [ ] Show token count and estimated cost per message/conversation
 [ ] Implement interactive diagram editing (edit code and see live updates)
 [ ] Add ability to export diagrams to SVG and PNG
-[ ] Add support for C4 model diagrams for software architecture
 [ ] Implement a "code-to-diagram" feature to visualize code blocks
-[ ] Add a GitHub integration tool to read files/issues from repositories
 [ ] Create a persistent "Context Profile" that can be attached to chats
 [ ] Implement multi-panel view to display multiple chats simultaneously
-[ ] Allow users to create and save custom system prompts
-[ ] Implement a Dockerfile and docker-compose for easy self-hosting
-[ ] Add a tool to generate API requests from an OpenAPI/Swagger specification
-[ ] Implement automatic PII (Personally Identifiable Information) redaction tool
-[ ] Add support for local file indexing for workspace-aware context
-[ ] Create a "New Chat from Template" feature (e.g., "Code Review," "API Helper")
-[ ] Add keyboard shortcut for focusing on the message input field
-[ ] Implement a more robust settings export/import feature
-[ ] Add a database connector tool for querying SQL databases
