feat(app): added task

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,8 @@
+[ ] Implement global search across all conversations
+[ ] Add a tool for fetching content from a user-provided URL
+[ ] Show token count and estimated cost per message/conversation
+[ ] Create a persistent "Context Profile" that can be attached to chats and allow users to create multiple profiles instead of the current one in config dialog that is just one
+[ ] Create a "Snippet Library" for users to save and reuse favorite prompts
 [ ] Remove the various UI choices that now conflict with each other (eg. having both a new chat button and a warning on deletion but then the conversation history)
 [ ] Optimise the web app where possible to make it less slow
 [ ] Fix duplicate type definitions
@@ -49,13 +54,3 @@
 [ ] Consider replacing react-mermaid
 [ ] Implement document analysis or remove endpoint
 [ ] Implement legal search or remove endpoint
-[ ] Implement a side-by-side model comparison view
-[ ] Create a "Snippet Library" for users to save and reuse favorite prompts
-[ ] Implement global search across all conversations
-[ ] Add a tool for fetching content from a user-provided URL
-[ ] Show token count and estimated cost per message/conversation
-[ ] Implement interactive diagram editing (edit code and see live updates)
-[ ] Add ability to export diagrams to SVG and PNG
-[ ] Implement a "code-to-diagram" feature to visualize code blocks
-[ ] Create a persistent "Context Profile" that can be attached to chats
-[ ] Implement multi-panel view to display multiple chats simultaneously
