docs(app): cleared todo

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
-[ ] Implement global search across all conversations
+[x] Implement global search across all conversations
 [ ] Add a tool for fetching content from a user-provided URL
 [ ] Show token count and estimated cost per message/conversation
 [ ] Create a persistent "Context Profile" that can be attached to chats and allow users to create multiple profiles instead of the current one in config dialog that is just one
