--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
 [x] Implement global search across all conversations
-[ ] Add a tool for fetching content from a user-provided URL
-[ ] Show token count and estimated cost per message/conversation
+[x] Add a tool for fetching content from a user-provided URL
+[x] Show token count and estimated cost per message/conversation
 [ ] Create a persistent "Context Profile" that can be attached to chats and allow users to create multiple profiles instead of the current one in config dialog that is just one
 [ ] Create a "Snippet Library" for users to save and reuse favorite prompts
 [ ] Remove the various UI choices that now conflict with each other (eg. having both a new chat button and a warning on deletion but then the conversation history)
