--- a/todo.txt
+++ b/todo.txt
@@ -3,21 +3,26 @@
 [x] Show token count and estimated cost per message/conversation
 [x] Enable history navigation in chat input (Up/Down arrows)
 [x] Auto-prepend https:// to URLs in fetch-url command
-[ ] Create a persistent "Context Profile" that can be attached to chats and allow users to create multiple profiles instead of the current one in config dialog that is just one
+
+[x] Create a persistent "Context Profile" that can be attached to chats and allow users to create multiple profiles instead of the current one in config dialog that is just one
 [ ] Create a "Snippet Library" for users to save and reuse favorite prompts
+[ ] Implement chat forking/branching to explore different lines of conversation (clarify funcitonality and render with a git graph-like view)
+[x] Add advanced generation parameter controls in the config dialog (temperature, top_p, etc.)
+
 [ ] Remove the various UI choices that now conflict with each other (eg. having both a new chat button and a warning on deletion but then the conversation history)
+
 [ ] Optimise the web app where possible to make it less slow
 [ ] Fix duplicate type definitions
 [ ] Remove empty interface
 [ ] Allow users to create and save custom system prompts
 [ ] Implement a Dockerfile and docker-compose for easy self-hosting
+
 [ ] Implement automatic PII (Personally Identifiable Information) redaction tool
+
 [ ] Create a "New Chat from Template" feature (e.g., "Code Review," "API Helper")
-[ ] Add keyboard shortcut for focusing on the message input field
+
 [ ] Integrate a local vector database (e.g., ChromaDB) for long-term memory and RAG
-[ ] Allow per-message model selection within a single chat
-[ ] Implement chat forking/branching to explore different lines of conversation (clarify funcitonality and render with a git graph-like view)
-[ ] Add advanced generation parameter controls in the config dialog (temperature, top_p, etc.)
+
 
 [ ] Replace deprecated methods
 [ ] Remove console.log statements in production code
