feat(app): refining inptu choices

--- a/todo.txt
+++ b/todo.txt
@@ -8,7 +8,8 @@
 [ ] Create a "Snippet Library" for users to save and reuse favorite prompts
 [ ] Implement chat forking/branching to explore different lines of conversation (clarify funcitonality and render with a git graph-like view)
 [x] Add advanced generation parameter controls in the config dialog (temperature, top_p, etc.)
-
+[ ] Make the generation controls textboxes, not a slider as the main control input
+[ ] Allow everything in Junas to be configured with a single toml script that can be pasted when in developer mode (junas toml file)
 [ ] Remove the various UI choices that now conflict with each other (eg. having both a new chat button and a warning on deletion but then the conversation history)
 
 [ ] Optimise the web app where possible to make it less slow
