--- a/todo.txt
+++ b/todo.txt
@@ -5,8 +5,8 @@
 [x] Auto-prepend https:// to URLs in fetch-url command
 
 [x] Create a persistent "Context Profile" that can be attached to chats and allow users to create multiple profiles instead of the current one in config dialog that is just one
-[ ] Create a "Snippet Library" for users to save and reuse favorite prompts
-[ ] Implement chat forking/branching to explore different lines of conversation (clarify funcitonality and render with a git graph-like view)
+[x] Create a "Snippet Library" for users to save and reuse favorite prompts
+[x] Implement chat forking/branching to explore different lines of conversation (clarify funcitonality and render with a git graph-like view)
 [x] Add advanced generation parameter controls in the config dialog (temperature, top_p, etc.)
 [ ] Make the generation controls textboxes, not a slider as the main control input
 [ ] Allow everything in Junas to be configured with a single toml script that can be pasted when in developer mode (junas toml file)
