feat(app): added new ideas

--- a/todo.txt
+++ b/todo.txt
@@ -7,6 +7,7 @@
 [x] Create a persistent "Context Profile" that can be attached to chats and allow users to create multiple profiles instead of the current one in config dialog that is just one
 [x] Create a "Snippet Library" for users to save and reuse favorite prompts
 [x] Implement chat forking/branching to explore different lines of conversation (clarify funcitonality and render with a git graph-like view)
+[x] Add functionality to view conversation tree visualization
 [x] Add advanced generation parameter controls in the config dialog (temperature, top_p, etc.)
 [x] Fix build error in ChatInterface.tsx
 [ ] Make the generation controls textboxes, not a slider as the main control input
