feat(app): thoorughly read through and understand the issue

--- a/todo.txt
+++ b/todo.txt
@@ -5,6 +5,7 @@
 [x] Auto-prepend https:// to URLs in fetch-url command
 
 [x] Create a persistent "Context Profile" that can be attached to chats and allow users to create multiple profiles instead of the current one in config dialog that is just one
+[x] Fix tree visualization diagram visibility in dark mode
 [x] Create a "Snippet Library" for users to save and reuse favorite prompts
 [x] Implement chat forking/branching to explore different lines of conversation (clarify funcitonality and render with a git graph-like view)
 [x] Add functionality to view conversation tree visualization
