docs(app): cleared and updated todo docs

--- a/todo.txt
+++ b/todo.txt
@@ -3,7 +3,6 @@
 [x] Show token count and estimated cost per message/conversation
 [x] Enable history navigation in chat input (Up/Down arrows)
 [x] Auto-prepend https:// to URLs in fetch-url command
-
 [x] Create a persistent "Context Profile" that can be attached to chats and allow users to create multiple profiles instead of the current one in config dialog that is just one
 [x] Fix tree visualization diagram visibility in dark mode
 [x] Create a "Snippet Library" for users to save and reuse favorite prompts
@@ -11,8 +10,10 @@
 [x] Add functionality to view conversation tree visualization
 [x] Add advanced generation parameter controls in the config dialog (temperature, top_p, etc.)
 [x] Fix build error in ChatInterface.tsx
-[ ] Make the generation controls textboxes, not a slider as the main control input
+
+[ ] Make the generation controls input textboxes for the number values, not a slider as the main control input
 [ ] Allow everything in Junas to be configured with a single toml script that can be pasted when in developer mode (junas toml file)
+
 [ ] Remove the various UI choices that now conflict with each other (eg. having both a new chat button and a warning on deletion but then the conversation history)
 
 [ ] Optimise the web app where possible to make it less slow
