feat(app): adedd toml config file

--- a/todo.txt
+++ b/todo.txt
@@ -11,8 +11,8 @@
 [x] Add advanced generation parameter controls in the config dialog (temperature, top_p, etc.)
 [x] Fix build error in ChatInterface.tsx
 
-[ ] Make the generation controls input textboxes for the number values, not a slider as the main control input
-[ ] Allow everything in Junas to be configured with a single toml script that can be pasted when in developer mode (junas toml file)
+[x] Make the generation controls input textboxes for the number values, not a slider as the main control input
+[x] Allow everything in Junas to be configured with a single toml script that can be pasted when in developer mode (junas toml file)
 
 [ ] Remove the various UI choices that now conflict with each other (eg. having both a new chat button and a warning on deletion but then the conversation history)
 
