--- a/todo.txt
+++ b/todo.txt
@@ -11,6 +11,7 @@
 [x] Add advanced generation parameter controls in the config dialog (temperature, top_p, etc.)
 [x] Fix build error in ChatInterface.tsx
 
+[x] Fix layout to ensure chat scrolls correctly while header/footer remain anchored
 [x] Make the generation controls input textboxes for the number values, not a slider as the main control input
 [x] Allow everything in Junas to be configured with a single toml script that can be pasted when in developer mode (junas toml file)
 
