--- a/todo.txt
+++ b/todo.txt
@@ -12,6 +12,8 @@
 
 [ ] Integrate a local vector database (e.g., ChromaDB) for long-term memory and RAG
 
+[ ] Add an optimised mobile view 
+
 [ ] Replace deprecated methods
 [ ] Remove console.log statements in production code
 [ ] Implement onRegenerateMessage callback
