feat(app): thanks

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
 [ ] Remove the various UI choices that now conflict with each other (eg. having both a new chat button and a warning on deletion but then the conversation history)
+[ ] Ensure can deploy to vercel
 
 [ ] Optimise the web app where possible to make it less slow
 [ ] Fix duplicate type definitions
