fix(app): new fixes

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,7 @@
 [ ] Remove the various UI choices that now conflict with each other (eg. having both a new chat button and a warning on deletion but then the conversation history)
 [ ] Ensure can deploy to vercel
+[ ] Make the Config various subtabs vertical instead of horizontal as it currently is
+[ ] Ensure the toml file is easy to understand
 
 [ ] Optimise the web app where possible to make it less slow
 [ ] Fix duplicate type definitions
