feat(app): rules

--- a/todo.txt
+++ b/todo.txt
@@ -58,3 +58,4 @@
 
 [ ] Implement document analysis or remove endpoint
 [ ] Implement legal search or remove endpoint
+[x] Enable web search tool for AI models (Agent Mode)
