docs(app): docspec added

--- a/todo.txt
+++ b/todo.txt
@@ -3,6 +3,7 @@
 [ ] Make the Config various subtabs vertical instead of horizontal as it currently is
 [ ] Ensure the toml file is easy to understand for users to diectly configure Junas if they want
 [ ] Tweak the web search functionality, it should use the curl implementation for URLs by default (meaning no search API required) but provide advanced features if users want it
+[ ] Make the conversation tree tab look nicer, more angular boxes, same font text as the rest of the web app
 
 [ ] Optimise the web app where possible to make it less slow
 [ ] Fix duplicate type definitions
