--- a/todo.txt
+++ b/todo.txt
@@ -4,6 +4,7 @@
 [ ] Ensure the toml file is easy to understand for users to diectly configure Junas if they want
 [ ] Tweak the web search functionality, it should use the curl implementation for URLs by default (meaning no search API required) but provide advanced features if users want it
 [ ] Make the conversation tree tab look nicer, more angular boxes, same font text as the rest of the web app
+[ ] Make the theme colorscheme a text input for selection and not a dropdown
 
 [ ] Optimise the web app where possible to make it less slow
 [ ] Fix duplicate type definitions
