--- a/todo.txt
+++ b/todo.txt
@@ -9,7 +9,7 @@
 [ ] Optimise the web app where possible to make it less slow
 [ ] Fix duplicate type definitions
 [ ] Remove empty interface
-[ ] Allow users to create and save custom system prompts
+[x] Allow users to create and save custom system prompts
 [ ] Implement a Dockerfile and docker-compose for easy self-hosting
 
 [ ] Implement automatic PII (Personally Identifiable Information) redaction tool
