feat(app): updated todo

--- a/todo.txt
+++ b/todo.txt
@@ -5,6 +5,8 @@
 [ ] Tweak the web search functionality, it should use the curl implementation for URLs by default (meaning no search API required) but provide advanced features if users want it
 [ ] Make the conversation tree tab look nicer, more angular boxes, same font text as the rest of the web app
 [ ] Make the theme colorscheme a text input for selection and not a dropdown
+[ ] Update the toml to read everyhting necessary for a configuration
+[ ] Declutter the currently quite confused looking configuration toml file
 
 [ ] Optimise the web app where possible to make it less slow
 [ ] Fix duplicate type definitions
