fix(app): ideas

--- a/todo.txt
+++ b/todo.txt
@@ -7,6 +7,7 @@
 [ ] Make the theme colorscheme a text input for selection and not a dropdown
 [ ] Update the toml to read everyhting necessary for a configuration
 [ ] Declutter the currently quite confused looking configuration toml file
+[ ] allow user to chain toolcalls in the / commands, similar to how anonymous functions are called
 
 [ ] Optimise the web app where possible to make it less slow
 [ ] Fix duplicate type definitions
