feat(app): good jb

--- a/todo.txt
+++ b/todo.txt
@@ -8,6 +8,7 @@
 [ ] Update the toml to read everyhting necessary for a configuration
 [ ] Declutter the currently quite confused looking configuration toml file
 [ ] allow user to chain toolcalls in the / commands, similar to how anonymous functions are called
+[ ] see if there are any services that let the PROJECT ITSELF be deployed via the docker build instead of hard rebuilding on vercel
 
 [ ] Optimise the web app where possible to make it less slow
 [ ] Fix duplicate type definitions
