fix(app): cleared tasking list

--- a/todo.txt
+++ b/todo.txt
@@ -1,30 +1,6 @@
 [ ] Remove the various UI choices that now conflict with each other (eg. having both a new chat button and a warning on deletion but then the conversation history)
-[ ] see if there are any services that let the PROJECT ITSELF be deployed via the docker build instead of hard rebuilding on vercel
-
-[ ] Implement automatic PII (Personally Identifiable Information) redaction tool
-
 [ ] Add an optimised mobile view 
-
-[ ] Replace deprecated methods
-[ ] Remove console.log statements in production code
-[ ] Implement onRegenerateMessage callback
-[ ] Reduce usage of 'any' type
-[ ] Run npm audit
-[ ] Clean up ChatService dead methods
-[ ] Consistent API key storage pattern
-[ ] Fix in-memory rate limiter for serverless
-[ ] Add React Error Boundaries
-[ ] Replace polling with proper state management
-[ ] Fix memory leak in rate limiter cleanup
-[ ] Deduplicate provider initialization logic
-
-[ ] Remove CustomEvent communication pattern
-[ ] Secure session password handling
-
-[ ] Add testing framework
-[ ] Add unit tests for core utilities
-[ ] Add integration tests for API routes
-[ ] Review API key endpoint security
+[ ] See if there are any services that let the PROJECT ITSELF be deployed via the docker build instead of hard rebuilding on vercel
 
 [ ] Add pre-commit hooks
 [ ] Add Prettier configuration
@@ -42,6 +18,3 @@
 [ ] Update dependencies
 [ ] Remove unused dependencies
 [ ] Consider replacing react-mermaid
-
-[ ] Implement document analysis or remove endpoint
-[ ] Implement legal search or remove endpoint
