docs(app): flaming hot

--- a/todo.txt
+++ b/todo.txt
@@ -2,6 +2,20 @@
 [ ] Add an optimised mobile view 
 [ ] See if there are any services that let the PROJECT ITSELF be deployed via the docker build instead of hard rebuilding on vercel
 
+[ ] Replace deprecated methods
+[ ] Remove console.log statements in production code
+[ ] Implement onRegenerateMessage callback
+[ ] Reduce usage of 'any' type if there are any still present
+[ ] Clean up ChatService dead methods
+[ ] Consistent API key storage pattern
+[ ] Fix in-memory rate limiter for serverless
+[ ] Add React Error Boundaries
+[ ] Replace polling with proper state management
+[ ] Fix memory leak in rate limiter cleanup
+[ ] Deduplicate provider initialization logic
+[ ] Remove CustomEvent communication pattern
+[ ] Run npm audit
+
 [ ] Add pre-commit hooks
 [ ] Add Prettier configuration
 [ ] Add .nvmrc file
