docs(app): segregating more specific tassk to work on

--- a/todo.txt
+++ b/todo.txt
@@ -1,18 +1,15 @@
 [ ] Remove the various UI choices that now conflict with each other (eg. having both a new chat button and a warning on deletion but then the conversation history)
 [ ] Add an optimised mobile view 
 [ ] See if there are any services that let the PROJECT ITSELF be deployed via the docker build instead of hard rebuilding on vercel
+[ ] Ensure the UI is usable and looks good, if not fix
 
-[ ] Clean up ChatService dead methods
-[ ] Consistent API key storage pattern
-[ ] Fix in-memory rate limiter for serverless
-[ ] Add React Error Boundaries
 
 [ ] Replace polling with proper state management
 [ ] Fix memory leak in rate limiter cleanup
 [ ] Deduplicate provider initialization logic
 [ ] Remove CustomEvent communication pattern
-[ ] Run npm audit
 
+[ ] Run npm audit
 [ ] Add pre-commit hooks
 [ ] Add Prettier configuration
 [ ] Add .nvmrc file
