docs(app): understood

--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,7 @@
 [ ] Remove the various UI choices that now conflict with each other (eg. having both a new chat button and a warning on deletion but then the conversation history)
 [ ] Add an optimised mobile view 
 [ ] See if there are any services that let the PROJECT ITSELF be deployed via the docker build instead of hard rebuilding on vercel
-[ ] Ensure the UI is usable and looks good, if not fix
-
+[ ] Ensure the UI is usable and looks good from a user's perspective, and fix any issue that might make junas less appealing to use
 
 [ ] Replace polling with proper state management
 [ ] Fix memory leak in rate limiter cleanup
