refactor(app): cleared up issues with deployment

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,6 @@
 [ ] Remove the various UI choices that now conflict with each other (eg. having both a new chat button and a warning on deletion but then the conversation history)
 [ ] Ensure the UI is usable and looks good from a user's perspective, and fix any issue that might make junas less appealing to use
+[ ] Fix any bugs arising from the current iteration of tree/conversation tree
 
 [ ] Consider virtualization for message list (clarify first what this means)
 
